86c167px0 - Fixed recaptcha logo being overlapped by other elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,6 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-
 .notranslate .rs-picker-default .rs-btn,
 .rs-picker-default .rs-picker-toggle,
 .rs-picker-input .rs-btn,
@@ -53,12 +52,12 @@ input[type="number"] {
   align-items: center;
 }
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .translate3d {
   transform: translate3d(0, 0, 0);
@@ -164,12 +163,16 @@ input[type="number"] {
   align-items: center;
 }
 
-.swiper-slide img {
+.grecaptcha-badge {
+  z-index: 10;
+}
+
+/* .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 @media (max-width: 768px) {
   .swiper-button-prev {
@@ -311,7 +314,7 @@ input[type="number"] {
 }
 
 .favorites:hover > .activeWishlist {
- display: block !important;
+  display: block !important;
 }
 
 .slider .rs-slider-bar {
