--- a/components/ProductDetails/styles.module.css
+++ b/components/ProductDetails/styles.module.css
@@ -15,12 +15,12 @@
   width: 100%;
 }
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .swiper {
   width: 25%;
